# ondevice-fewshot-kws

./: .gitignore  DET.ipynb  Dockerfile  MSWC.tree.txt  README.new.md  apt.installs.txt  gsc.txt  mygsc.txt  pyproject.toml  test.new.sh  test.sh  train.sh  train.txt
KWSFSL/: metric_learning.py  metrics.py  parser_kws.py  test.data.py  test.fewshots.py  test_fewshots.new.py  test_fewshots_classifiers_openset.py  utils.py
KWSFSL/classifiers/: NCM.py  NCM_openmax.py  __init__.py  dproto.py
KWSFSL/data/: GSCSpeechData.py  MSWCData.py  MSWCtest.py  MSWCtest_new.py  base.py  gsc.py  mswc.py  utils.py
KWSFSL/models/: repr_model.py  utils.py
KWSFSL/models/encoder/: BCResNet.py  ConvNeXt.py  ConvNeXtV2.py  resnet.py
KWSFSL/models/losses/: dproto.py
scripts/: avg-result  divide  frequent  get-links  gsc-index  mswc-freq  mswc-opus2wav  mswc-sample  mswc-sgo  parse-col  parse-result  preview  run  wav-convert
